traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      nodePort: 32080
    - protocol: TCP
      port: 443
      nodePort: 32443
    - protocol: TCP
      port: 8080
      nodePort: 32081
